<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="counter_question">0 out of 100</string>
    <string name="question_textView">question_textView</string>
    <string name="wrong_answer">Wrong</string>
    <string name="correct_answer">Correct</string>
    <string name="total_score">Total Score : 0</string>
    <string name="highest_score">Highest Score : 0</string>
</resources>
